# agent-os

./: .gitignore  DELIVERY.md  QUICKREF.md  README.md  STRUCTURE.md  TEST_REPORT.md  pyproject.toml  pytest.ini  verify_mvp.sh
.github/workflows/: ci.yml
agent-runtime/agno/: pyproject.toml
agent-runtime/agno/agent_runtime_agno/: __init__.py
agent-runtime/agno/agent_runtime_agno/adapters/: __init__.py  agno_adapter.py
agent_runtime_agno/: __init__.py
agent_runtime_agno/adapters/: __init__.py  agno_adapter.py
agents/sample-agent/: agent-with-policy.yaml  agent.yaml  allow-calculator-only.policy.yaml  calculator-with-config.tool.yaml  calculator.tool.yaml  deny-web-search.policy.yaml  input-simple.json  input-web-search.json  input.json  rate-limit.policy.yaml  web-search.tool.yaml
agents/sample_agent/: README.md  agent.json
agents/sample_agent/policies/: basic-policy.json
agents/testcase-generator/: agent.yaml  input.json  requirements-reader.tool.yaml  requirements.txt  testcase-generator.tool.yaml  testcase-validator.tool.yaml  testcase-writer.tool.yaml
console/: pyproject.toml
console/console/: __init__.py  app.py
console/console/static/: style.css
console/console/templates/: layout.html  run_detail.html  runs.html
control-plane/: pyproject.toml
control-plane/agent_control_plane/: __init__.py
control-plane/agent_control_plane/pal/: __init__.py  implementations.py  interfaces.py  policy_engine.py  registry.py  tool_executor.py
control-plane/agent_control_plane/registry/: __init__.py
control-plane/agent_control_plane/sdk/: __init__.py
control-plane/agent_control_plane/sdk/cli/: __init__.py  main.py
control-plane/agent_control_plane/specs/: __init__.py  validator.py
control-plane/agent_control_plane/specs/schemas/: agent.schema.json  policy.schema.json  runevent.schema.json  tool.schema.json  tracespan.schema.json
docs/: AgentOS_PPT.md  B0产出.md  B1产出.md  B2产出.md  B3产出.md  B4产出.md  B5产出.md  B6产出.md  B7产出.md  B8产出.md  B9产出.md  Iteration0_仓库骨架.md  Iteration0_先让模型生成仓库骨架.md  Iteration1_Spec和Validator_CRD核心.md  Iteration1_让模型把5个Schema+校验器落地.md  Iteration2_PAL+agnoAdapter_数据面.md  Iteration2_PAL+agnoAdapter最关键.md  Iteration3_ToolGateway+Policy+稳定性超时审计.md  Iteration3_ToolGateway+Policy_稳定性.md  Iteration4_样板Agent.md  Iteration4样板Agent测试用例生成落地.md  Iteration5_Console+ContractTests.md  Iteration5最小Console+ContractTests+Guard防绕路.md  Iteration_全局总控.md  PromptPipeline_B0产出.md  PromptPipeline_B1产出.md  PromptPipeline_B2产出.md  PromptPipeline_B3产出.md  PromptPipeline_B4产出.md  PromptPipeline_B5产出.md  PromptPipeline_B6产出.md  PromptPipeline_B7产出.md  PromptPipeline_B8产出.md  PromptPipeline_B9产出.md  PromptPipeline总览.md  PromptPipeline总览_落地实现.md  一页总览AIAgent底座AgentOS架构.md
platform_core/: __init__.py
platform_core/cli/: __init__.py  main.py
platform_core/registry/: __init__.py  registry.py
platform_core/sdk/: __init__.py  models.py  runtime.py  validator.py
platform_core/specs/: agent.schema.json  policy.schema.json  tool.schema.json
scripts/: check_imports.py  guard_no_runtime_imports.sh  test_all.sh  verify_iter.sh
tests/: test_cli.py  test_console_smoke.py  test_policy_and_tool_stability.py  test_spec_validation.py
tests/contract/: __init__.py  conftest.py  pyproject.toml  test_run_events.py  test_sample_agent.py  test_testcase_generator.py
tests/e2e/: __init__.py  test_testcase_agent_flow.py
(+1 files in other folders)
