[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-agno"
version = "0.1.0"
description = "Agent OS Runtime - Agno Adapter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agent-control-plane>=0.1.0",
    # agno will be added when implementing actual adapter
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["agent_runtime_agno*"]
