[project]
name = "agent-os-contract-tests"
version = "0.1.0"
description = "Contract tests for Agent OS"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.4.0",
    "agent-control-plane",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
